--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -161,6 +161,8 @@
     <Compile Include="Patch\RimWorldPatches\PawnRenderer\PawnRenderer_GetBodyPos_HideBlankets.cs" />
     <Compile Include="Patch\RimWorldPatches\PawnRenderer\PawnRenderer_LayingFacing_SetRotation.cs" />
     <None Include="Garbage\Pawn_RareTick_UpdateBodyGraphic.cs" />
+    <Compile Include="Patch\RimWorldPatches\PortraitsCache_Get_MakePortraitsScaleForBodySize.cs" />
+    <Compile Include="Patch\RimWorldPatches\PortraitsCache_RenderPortrait_DisablePawnPortraitRotationForPawnsInBed.cs" />
     <Compile Include="Patch\RimWorldPatches\StatWorker_GetValue_DynamicMassPatch.cs" />
     <Compile Include="Patch\RimWorldPatches\Hediff_SeverityLabel_DisplayWeightOnHover.cs" />
     <Compile Include="Patch\RimWorldPatches\Thing_Ingested\Thing_Ingested_AddFullness.cs" />
