New logic for when portrait rotates and when pawn faces what direction when downed. Work done on mocking up portrait fixes.

--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Patch\RimWorldPatches\PawnRenderer\PawnRenderer_GetBodyPos_HideBlankets.cs" />
     <Compile Include="Patch\RimWorldPatches\PawnRenderer\PawnRenderer_LayingFacing_SetRotation.cs" />
     <None Include="Garbage\Pawn_RareTick_UpdateBodyGraphic.cs" />
+    <Compile Include="Patch\RimWorldPatches\PawnRenderer\PawnRenderer_RenderPawnInternal_AdjustHeadDrawPosForPortrait.cs" />
     <Compile Include="Patch\RimWorldPatches\PortraitsCache_Get_MakePortraitsScaleForBodySize.cs" />
     <Compile Include="Patch\RimWorldPatches\PortraitsCache_RenderPortrait_DisablePawnPortraitRotationForPawnsInBed.cs" />
     <Compile Include="Patch\RimWorldPatches\StatWorker_GetValue_DynamicMassPatch.cs" />
@@ -176,6 +177,7 @@
     <Compile Include="Patch\RimWorldPatches\Thing_Ingested\Thing_Ingested_HarmonyPatch.cs" />
     <Compile Include="Patch\RimWorldPatches\Thing_Ingested\Thing_Ingested_StomachBurstCheck.cs" />
     <Compile Include="FeedingTube V2\Patches\ThingListGroupHelper_Includes_AddSupportForFaucet.cs" />
+    <Compile Include="Patch\RimWorldPatches\JobDriver-LayDown_LayDownToil_UpdatePawnPortrait.cs" />
     <Compile Include="UI\Gizmos\HideCoversGizmo.cs" />
     <Compile Include="UI\MainTabWindow_RRGlobalSettings.cs" />
     <Compile Include="UI\Gizmos\MakeBlobIntoBedGizmo.cs" />
