Change inspect string for food faucet and food transmiters Correctly load folders specified in loadfolders Dropdown to change background for start menu now shows for those without royalty or ideology Pawn wiggler adjustment actually works (again) Removed unused code from head adjustment setting

--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -82,6 +82,7 @@
     <Compile Include="AI\ThoughtWorker_WeightOpinion_Neutral.cs" />
     <Compile Include="AI\ThoughtWorker_WeightOpinion_NeutralMinus.cs" />
     <Compile Include="AI\ThoughtWorker_WeightOpinion_NeutralPlus.cs" />
+    <Compile Include="Patch\RimWorldPatches\Dialog-Options_DoWindowContents_ShowDropdownToChangeBGAlways.cs" />
     <Compile Include="Patch\RimWorldPatches\Page-ConfigureStartingPawns_DrawPortraitArea_UpdateSprite.cs" />
     <Compile Include="Utilities\BodyTypeUtility.cs" />
     <Compile Include="Utilities\HediffUtility.cs" />
