--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -74,6 +74,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AI\Recipe_RemoveFatLight.cs" />
+    <Compile Include="AI\Recipe_RemoveFatHeavy.cs" />
     <Compile Include="AI\ThoughtWorker_WeightOpinion_Dislike.cs" />
     <Compile Include="AI\ThoughtWorker_WeightOpinion_Fanatical.cs" />
     <Compile Include="AI\ThoughtWorker_WeightOpinion_Love.cs" />
@@ -82,7 +84,13 @@
     <Compile Include="AI\ThoughtWorker_WeightOpinion_Neutral.cs" />
     <Compile Include="AI\ThoughtWorker_WeightOpinion_NeutralMinus.cs" />
     <Compile Include="AI\ThoughtWorker_WeightOpinion_NeutralPlus.cs" />
+    <Compile Include="Patch\RimWorldPatches\Need-Food_FoodFallPerTickAssumingCategory_ReduceForHeavyPawns.cs" />
+    <Compile Include="Patch\RimWorldPatches\Caravan\CaravanPatchUtility.cs" />
+    <Compile Include="Patch\RimWorldPatches\Caravan\CaravanMaker_MakeCaravan_ChangeDietMode.cs" />
+    <Compile Include="Patch\RimWorldPatches\Caravan\Caravan_RemoveAllPawns_ChangeDietMode.cs" />
+    <Compile Include="Patch\RimWorldPatches\Caravan\Caravan_RemovePawn_ChangeDietMode.cs" />
     <Compile Include="Patch\RimWorldPatches\Dialog-Options_DoWindowContents_ShowDropdownToChangeBGAlways.cs" />
+    <Compile Include="Patch\RimWorldPatches\Need-Food_MalnutritionSeverityPerInterval_AdjustByPawnWeight.cs" />
     <Compile Include="Patch\RimWorldPatches\Page-ConfigureStartingPawns_DrawPortraitArea_UpdateSprite.cs" />
     <Compile Include="Utilities\BodyTypeUtility.cs" />
     <Compile Include="Utilities\HediffUtility.cs" />
@@ -116,13 +124,13 @@
     <Compile Include="AI\JobDrivers\JobDriver_StuffPrisoner.cs" />
     <Compile Include="Patch\HumanoidAlienRacesPatches\HarmonyPatches_GetPawnMesh_GetMeshForPortraitsToo.cs" />
     <Compile Include="Patch\RimWorldPatches\FeedPatientUtility_IsHungry_CheckForFullness.cs" />
-    <Compile Include="Patch\RimWorldPatches\FoodUtility_BestFoodSourceOnMap_AlterValidatorToCheckForFullness.cs" />
+    <Compile Include="Patch\RimWorldPatches\FoodUtility\FoodUtility_BestFoodSourceOnMap_AlterValidatorToCheckForFullness.cs" />
     <Compile Include="Patch\RimWorldPatches\ApparelGraphicRecordGetter_TryGetGraphicApparel_UseTransparentImagesForBadTex.cs" />
     <Compile Include="Patch\RimWorldPatches\Faction_SetRelationDirect_UpdateCategoricalExemption.cs" />
     <Compile Include="Patch\RimWorldPatches\FloatMenuMakerMap_AddHumanlikeOrders_AlterTextForFoodAboveHardLimit.cs" />
-    <Compile Include="Patch\RimWorldPatches\FoodUtility_FoodOptimality_AdjustOptimality.cs" />
+    <Compile Include="Patch\RimWorldPatches\FoodUtility\FoodUtility_FoodOptimality_AdjustOptimality.cs" />
     <None Include="Garbage\PawnDownedWiggler_RandomDownedAngle_AdjustByWeight.cs" />
-    <Compile Include="Patch\RimWorldPatches\FoodUtility_StackCountForNutrition_MaxChangedToMin.cs" />
+    <Compile Include="Patch\RimWorldPatches\FoodUtility\FoodUtility_StackCountForNutrition_MaxChangedToMin.cs" />
     <Compile Include="Patch\RimWorldPatches\GenGuest\GenGuest_EmancipateSlave_UpdateCategoricalExemptions.cs" />
     <Compile Include="Patch\RimWorldPatches\GenGuest\GenGuest_EnslavePrisoner_UpdateCategoricalExemptions.cs" />
     <Compile Include="Patch\RimWorldPatches\GenGuest\GenGuest_PrisonerRelease_UpdateCategoricalExemptions.cs" />
