Add vegetarian and meat based variants for large, huge, enormous and massive lavish and fine meals Fix larger meals being unable to be crafted Update patch maker with new templates Add Revia race support Fix bug where nutrition density was not factored in when limiting which foods pawns were allowed to eat Alter pawn weight distributions to vary by faction; raiders and caravaners should no longer spawn immobile Add debug hediff to allow pawns to move always Rename stat files

--- a/Source/TestingRange/TestingRange.csproj
+++ b/Source/TestingRange/TestingRange.csproj
@@ -5,4 +5,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>true</Private>
+    </Reference>
+  </ItemGroup>
+
 </Project>
