--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,11 @@
 
 # Mono auto generated files
 mono_crash.*
-
+Source/TestingRange/bin
 Source/Garbage/
+Source/Garbage/
+Source/RRBAS/
+Source/RRInstaller/
 
 # Build results
 [Dd]ebug/
