Add progress bar to weight hediff in health tab displaying progress to next stage Refactor patch as method definition in Hediff_Weight Reorganize patches into appropriate folders Remove deprecated patch related to hoverchairs as pawns

--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -100,25 +100,25 @@
     <Compile Include="Patch\HumanoidAlienRacesPatches\HarmonyPatches_BaseHeadOffsetAtHelper_AddExtraBodySpecificHeadOffset.cs" />
     <Compile Include="Patch\HumanoidAlienRacesPatches\HarmonyPatches_GenerateBodyTypePostfix_ChangeRandomBodyAssignmentForNullBackstoriesToThin.cs" />
     <Compile Include="Patch\RimWorldPatches\BodyPartDef_GetMaxHealth_AdjustMaxHPByWeight.cs" />
-    <Compile Include="Patch\RimWorldPatches\ITab-Pawn-Visitor_FillTab_AddLabelsForGainingReluctance.cs" />
+    <Compile Include="Patch\RimWorldPatches\MenuPatches\HealthCardUtility_DrawHediffRow_AddProgressBarToNextWeightStage.cs" />
+    <Compile Include="Patch\RimWorldPatches\MenuPatches\ITab-Pawn-Visitor_FillTab_AddLabelsForGainingReluctance.cs" />
     <Compile Include="Patch\RimWorldPatches\JobDriver-PlantWork_MakeNewToils_AddExtraPlantYields.cs" />
-    <Compile Include="Patch\RimWorldPatches\MechClusterGenerator_MechKindSuitableForCluster_ExcludeHoverchair.cs" />
-    <Compile Include="Patch\RimWorldPatches\Need-Food_FoodFallPerTickAssumingCategory_ReduceForHeavyPawns.cs" />
+    <Compile Include="Patch\RimWorldPatches\DietAIPatches\Need-Food_FoodFallPerTickAssumingCategory_ReduceForHeavyPawns.cs" />
     <Compile Include="Patch\RimWorldPatches\Caravan\CaravanPatchUtility.cs" />
     <Compile Include="Patch\RimWorldPatches\Caravan\CaravanMaker_MakeCaravan_ChangeDietMode.cs" />
     <Compile Include="Patch\RimWorldPatches\Caravan\Caravan_RemoveAllPawns_ChangeDietMode.cs" />
     <Compile Include="Patch\RimWorldPatches\Caravan\Caravan_RemovePawn_ChangeDietMode.cs" />
-    <Compile Include="Patch\RimWorldPatches\Dialog-Options_DoWindowContents_ShowDropdownToChangeBGAlways.cs" />
-    <Compile Include="Patch\RimWorldPatches\Need-Food_MalnutritionSeverityPerInterval_AdjustByPawnWeight.cs" />
-    <Compile Include="Patch\RimWorldPatches\Page-ConfigureStartingPawns_DoWindowContents_UpdateSprite.cs" />
+    <Compile Include="Patch\RimWorldPatches\MenuPatches\Dialog-Options_DoWindowContents_ShowDropdownToChangeBGAlways.cs" />
+    <Compile Include="Patch\RimWorldPatches\DietAIPatches\Need-Food_MalnutritionSeverityPerInterval_AdjustByPawnWeight.cs" />
+    <Compile Include="Patch\RimWorldPatches\GraphicalPatches\Page-ConfigureStartingPawns_DoWindowContents_UpdateSprite.cs" />
     <Compile Include="Patch\RimWorldPatches\PawnCapacityUtility_CalculateCapacityLevel_AddExceptionForMobilityScooter.cs" />
-    <Compile Include="Patch\RimWorldPatches\PawnGenerator_GenerateInitialHediffs_AddWeightHediffAndSetBodyType.cs" />
-    <Compile Include="Patch\RimWorldPatches\PawnGenerator_GeneratePawn_SetDefaultBodyType.cs" />
-    <Compile Include="Patch\RimWorldPatches\PawnGenerator_GenerateTraits_AddWeightOpinions.cs" />
+    <Compile Include="Patch\RimWorldPatches\PawnGenerator\PawnGenerator_GenerateInitialHediffs_AddWeightHediffAndSetBodyType.cs" />
+    <Compile Include="Patch\RimWorldPatches\PawnGenerator\PawnGenerator_GeneratePawn_SetDefaultBodyType.cs" />
+    <Compile Include="Patch\RimWorldPatches\PawnGenerator\PawnGenerator_GenerateTraits_AddWeightOpinions.cs" />
     <Compile Include="Patch\RimWorldPatches\PawnRenderer\PawnRenderer_BaseHeadOffsetAt_AdjustForOptionalNorthCustomSprites.cs" />
-    <Compile Include="Patch\RimWorldPatches\PawnUtility_GetPosture_AlterPostureIfWearingScooter.cs" />
-    <Compile Include="Patch\RimWorldPatches\Pawn_GetGizmos_AddRRGizmosForPrisoners.cs" />
-    <Compile Include="Patch\RimWorldPatches\WorkGiver-Warden-DeliverFood_JobOnThing_AddExceptionForFattenInteraction.cs" />
+    <Compile Include="Patch\RimWorldPatches\GraphicalPatches\PawnUtility_GetPosture_AlterPostureIfWearingScooter.cs" />
+    <Compile Include="Patch\RimWorldPatches\MenuPatches\Pawn_GetGizmos_AddRRGizmosForPrisoners.cs" />
+    <Compile Include="Patch\RimWorldPatches\DietAIPatches\WorkGiver-Warden-DeliverFood_JobOnThing_AddExceptionForFattenInteraction.cs" />
     <Compile Include="Patch\RJW_MC\CompMilkableHuman_ResourceAmount_AdjustForPawnBodyWeight.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -134,6 +134,7 @@
     <Compile Include="Utilities\ModCompatibilityUtility.cs" />
     <Compile Include="Utilities\PawnGeneratorUtility.cs" />
     <Compile Include="Utilities\PrisonerUtility.cs" />
+    <Compile Include="Utilities\Resources.cs" />
     <Compile Include="Utilities\WeightOpinionUtility.cs" />
     <None Include="app.config" />
     <None Include="Garbage\Building_FeedingTube.cs" />
@@ -164,36 +165,35 @@
     <Compile Include="Hediffs\Fullness\Hediff_Fullness.cs" />
     <Compile Include="AI\PrisonerStuff\JobDrivers\JobDriver_StuffPrisoner.cs" />
     <Compile Include="Patch\HumanoidAlienRacesPatches\HarmonyPatches_GetPawnMesh_GetMeshForPortraitsToo.cs" />
-    <Compile Include="Patch\RimWorldPatches\FeedPatientUtility_IsHungry_CheckForFullness.cs" />
+    <Compile Include="Patch\RimWorldPatches\DietAIPatches\FeedPatientUtility_IsHungry_CheckForFullness.cs" />
     <Compile Include="Patch\RimWorldPatches\FoodUtility\FoodUtility_BestFoodSourceOnMap_AlterValidatorToCheckForFullness.cs" />
-    <Compile Include="Patch\RimWorldPatches\ApparelGraphicRecordGetter_TryGetGraphicApparel_UseTransparentImagesForBadTex.cs" />
+    <Compile Include="Patch\RimWorldPatches\GraphicalPatches\ApparelGraphicRecordGetter_TryGetGraphicApparel_UseTransparentImagesForBadTex.cs" />
     <Compile Include="Patch\RimWorldPatches\Faction_SetRelationDirect_UpdateCategoricalExemption.cs" />
-    <Compile Include="Patch\RimWorldPatches\FloatMenuMakerMap_AddHumanlikeOrders_AlterTextForFoodAboveHardLimit.cs" />
+    <Compile Include="Patch\RimWorldPatches\MenuPatches\FloatMenuMakerMap_AddHumanlikeOrders_AlterTextForFoodAboveHardLimit.cs" />
     <Compile Include="Patch\RimWorldPatches\FoodUtility\FoodUtility_FoodOptimality_AdjustOptimality.cs" />
     <None Include="Garbage\PawnDownedWiggler_RandomDownedAngle_AdjustByWeight.cs" />
     <Compile Include="Patch\RimWorldPatches\FoodUtility\FoodUtility_StackCountForNutrition_MaxChangedToMin.cs" />
     <Compile Include="Patch\RimWorldPatches\Pawn-GuestTracker_SetGuestStatus_UpdateCategoricalExemptions.cs" />
     <Compile Include="Patch\RimWorldPatches\Graphic-Multi_Init_DontLogErrorsForRimRound.cs" />
     <Compile Include="Patch\HumanoidAlienRacesPatches\HarmonyPatches_ResolveAllGraphicsPrefix_UpdatePawnBodySize.cs" />
-    <Compile Include="Patch\RimWorldPatches\ModLister_AllExpansions_IncludeRimRound.cs" />
-    <Compile Include="Patch\RimWorldPatches\ModsConfig_LastInstalledExpansion_DefaultToRimRoundBG.cs" />
-    <Compile Include="Patch\RimWorldPatches\Pawn-HealthTracker_MakeDowned_SetCustomWiggleAngleInitial.cs" />
-    <Compile Include="Patch\RimWorldPatches\PawnDownedWiggler_WigglerTick_DisableOrSlowForHighWeights.cs" />
+    <Compile Include="Patch\RimWorldPatches\MenuPatches\ModLister_AllExpansions_IncludeRimRound.cs" />
+    <Compile Include="Patch\RimWorldPatches\MenuPatches\ModsConfig_LastInstalledExpansion_DefaultToRimRoundBG.cs" />
+    <Compile Include="Patch\RimWorldPatches\GraphicalPatches\Pawn-HealthTracker_MakeDowned_SetCustomWiggleAngleInitial.cs" />
+    <Compile Include="Patch\RimWorldPatches\GraphicalPatches\PawnDownedWiggler_WigglerTick_DisableOrSlowForHighWeights.cs" />
     <Compile Include="Patch\RimWorldPatches\PawnRenderer\PawnRenderer_DrawPawnBody_AddToggleForTattoos.cs" />
     <Compile Include="Patch\RimWorldPatches\PawnRenderer\PawnRenderer_GetBodyPos_HideBlankets.cs" />
     <Compile Include="Patch\RimWorldPatches\PawnRenderer\PawnRenderer_LayingFacing_SetRotation.cs" />
     <None Include="Garbage\Pawn_RareTick_UpdateBodyGraphic.cs" />
     <None Include="Patch\RimWorldPatches\PawnRenderer\PawnRenderer_RenderPawnInternal_AdjustHeadDrawDepth.cs" />
-    <Compile Include="Patch\RimWorldPatches\PortraitsCache_Get_MakePortraitsScaleForBodySize.cs" />
-    <Compile Include="Patch\RimWorldPatches\PortraitsCache_RenderPortrait_DisablePawnPortraitRotationForPawnsInBed.cs" />
-    <Compile Include="Patch\RimWorldPatches\Hediff_SeverityLabel_DisplayWeightOnHover.cs" />
+    <Compile Include="Patch\RimWorldPatches\GraphicalPatches\PortraitsCache_Get_MakePortraitsScaleForBodySize.cs" />
+    <Compile Include="Patch\RimWorldPatches\GraphicalPatches\PortraitsCache_RenderPortrait_DisablePawnPortraitRotationForPawnsInBed.cs" />
     <Compile Include="Patch\RimWorldPatches\Thing_Ingested\Thing_Ingested_AddFullness.cs" />
-    <Compile Include="Patch\RimWorldPatches\JobGiver-GetFood_GetPriority_AdjustAIForDietMode.cs" />
-    <Compile Include="Patch\RimWorldPatches\Need-Food_NutritionWanted_AdjustAIForDietMode.cs" />
+    <Compile Include="Patch\RimWorldPatches\DietAIPatches\JobGiver-GetFood_GetPriority_AdjustAIForDietMode.cs" />
+    <Compile Include="Patch\RimWorldPatches\DietAIPatches\Need-Food_NutritionWanted_AdjustAIForDietMode.cs" />
     <None Include="Garbage\Pawn_Tick_PassiveWeightLoss.cs" />
     <Compile Include="Patch\RimWorldPatches\Thing_Ingested\Thing_Ingested_HarmonyPatch.cs" />
     <Compile Include="Patch\RimWorldPatches\Thing_Ingested\Thing_Ingested_StomachBurstCheck.cs" />
-    <Compile Include="Patch\RimWorldPatches\JobDriver-LayDown_LayDownToil_UpdatePawnPortrait.cs" />
+    <Compile Include="Patch\RimWorldPatches\GraphicalPatches\JobDriver-LayDown_LayDownToil_UpdatePawnPortrait.cs" />
     <Compile Include="UI\Gizmos\HideCoversGizmo.cs" />
     <Compile Include="UI\MainTabWindow_RRGlobalSettings.cs" />
     <Compile Include="UI\Gizmos\MakeBlobIntoBedGizmo.cs" />
