Add three new thoughts for Gelatinous II and above for all weight opinions. Courtesy of Ultranova. Add new hopper 'XL hopper'. For use with food processor to accept a greater variety of food items. Add new inspect tab 'Desc.' for pawns. Descriptions courtesy of Ultranova. Update patch for RJW - Milkable colonists. Weights above Gelatinous II now have specific multipliers. Add multiplier setting for RJW - MC milk yield in RR settings. Fix weight opinions not applying to correct weights. Update changelog

--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -163,6 +163,7 @@
     </Compile>
     <Compile Include="RimRoundCore\Things\FatteningBullet.cs" />
     <Compile Include="RimRoundCore\Things\ME_FatteningBullet.cs" />
+    <Compile Include="RimRoundCore\UI\ITab_CharacterDesc.cs" />
     <Compile Include="RimRoundCore\Utilities\BodyTypeUtility.cs" />
     <Compile Include="RimRoundCore\Utilities\HediffUtility.cs" />
     <Compile Include="RimRoundCore\Utilities\HungerDroneUtility.cs" />
