Add many new research defs. Add four new implants with needed defs, accompanying changes to patches, HediffUtility and hediff classes. Add male descriptions for weight. Add title for each weight level. Adjust position of desciption box to look prettier and show scrollbar. Add sprites and test object for flab grenade. Add personal modifiers for each impact added by fullness hediff. Add personal weight gain factor in FullnessAndDietStats_ThingComp. Update localization.

--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -124,6 +124,10 @@
     <Compile Include="RimRoundCore\Comps\PsychicShips\CompProperties_IncreaseHunger.cs" />
     <Compile Include="RimRoundCore\Defs\InteractionDefOf.cs" />
     <Compile Include="RimRoundCore\Defs\ME_ExtraProductPlantYield.cs" />
+    <Compile Include="RimRoundCore\Hediffs\Hediff_AIEncouragementChip.cs" />
+    <Compile Include="RimRoundCore\Hediffs\Hediff_BionicMetabolizer.cs" />
+    <Compile Include="RimRoundCore\Hediffs\Hediff_ArchotechMetabolizer.cs" />
+    <Compile Include="RimRoundCore\Hediffs\Hediff_FullnessImplant.cs" />
     <Compile Include="RimRoundCore\Patch\HumanoidAlienRacesPatches\AlienPartGenerator_GetNakedPath_MakeAllRRBodyTexRequestsUseDefaultPath.cs" />
     <Compile Include="RimRoundCore\Patch\HumanoidAlienRacesPatches\BackstoryDef_ResolveReferences_ChangeRandomBodyAssignmentForNullBackstoriesToThin.cs" />
     <Compile Include="RimRoundCore\Patch\HumanoidAlienRacesPatches\HarmonyPatches_BaseHeadOffsetAtHelper_AddExtraBodySpecificHeadOffset.cs" />
